added profile picture upload and display on frontend

--- a/client/src/features/general/navbar.css
+++ b/client/src/features/general/navbar.css
@@ -2,3 +2,8 @@
     display: flex;
     justify-content: space-evenly;
 }
+
+.navbarProfilePicture {
+    height: 30px;
+    border-radius: 15px;
+}
