--- a/client/src/features/chat/chatDetail.css
+++ b/client/src/features/chat/chatDetail.css
@@ -84,6 +84,7 @@
     max-width: 40px;
     max-height: 40px;
     border-radius: 10px;
+    cursor: pointer;
 }
 
 .myMessage, .otherMessage {
@@ -192,4 +193,41 @@
     color: hsl(270, 7%, 64%);
     line-height: 150%;
     padding-right: 35px;
+}
+
+.photoDetailContainer {
+    position: absolute;
+    z-index: 10;
+    top: 100px;
+    left: 20%;
+    width: 60%;
+}
+
+.photoDetail {
+    width: 100%;
+    box-shadow: 3px 3px 3px gray;
+}
+
+.closePhotoDetailButton {
+    position: absolute;
+    right: 1px;
+    top: 1px;
+    height: 20px;
+    width: 20px;
+    background-color: ivory;
+    color: black;
+    border-radius: 10px;
+    cursor: pointer;
+    border: none;
+}
+
+.closePhotoDetailButton:hover {
+    color: orange;
+    font-weight: bold;
+}
+
+.blurred {
+    opacity: 60%;
+    filter: blur(10px);
+    filter: brightness(30%);
 }
