--- a/client/src/features/chat/chatUsers.css
+++ b/client/src/features/chat/chatUsers.css
@@ -3,7 +3,7 @@
     position: absolute;
     z-index: 2;
     top: 132px;
-    left: 33%;
+    left: 32%;
     color: hsl(271, 36%, 24%);
     font-size: 12px;
     color: white;
@@ -20,7 +20,7 @@
     position: absolute;
     z-index: 2;
     top: 172px;
-    left: 33%;
+    left: 32%;
     width: 170px;
 }
 
@@ -77,7 +77,7 @@
     position: absolute;
     z-index: 2;
     top: 225px;
-    left: 32%;
+    left: 31%;
     width: 180px;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -109,7 +109,7 @@
     position: absolute;
     z-index: 2;
     top: 500px;
-    left: 32%;
+    left: 31%;
     width: 180px;
     display: flex;
     justify-content: center;
@@ -159,3 +159,7 @@
 .addUserButtonAdd:hover, .addUserButtonCancel:hover {
     font-weight: bold;
 }
+
+@media (min-width: 768px) and (max-width: 1023px) {}
+
+@media (max-width: 767px) {}
